// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cardslist component add cardslist click snaphot 1`] = `
<div
  className="board"
>
  <div
    className="board-name"
  >
    <h1>
      XML Health
    </h1>
  </div>
  <div
    className="board-list"
  >
    <ul>
      <li
        key="0"
      >
        <input
          disabled={true}
          id="2skdde39hzdo08aqcdgd"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="XML Health"
        />
        <Connect(Cards)
          boardId="46mdujckqs45tkdsh2jdxz"
          cardslistId="2skdde39hzdo08aqcdgd"
          key="0"
        />
        <input
          name="deleteCardslist"
          onClick={[Function]}
          type="button"
          value="Delete Cardslist"
        />
        <input
          name="editCardslist"
          onClick={[Function]}
          type="button"
          value="Edit Cardslist"
        />
      </li>
    </ul>
    <input
      name="addCardslist"
      onClick={[Function]}
      type="button"
      value="Add Cards list"
    />
     
  </div>
</div>
`;

exports[`Cardslist component add cardslist click snaphot 2`] = `
<div
  className="board"
>
  <div
    className="board-name"
  >
    <h1>
      XML Health
    </h1>
  </div>
  <div
    className="board-list"
  >
    <ul>
      <li
        key="0"
      >
        <input
          disabled={true}
          id="2skdde39hzdo08aqcdgd"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="XML Health"
        />
        <Connect(Cards)
          boardId="46mdujckqs45tkdsh2jdxz"
          cardslistId="2skdde39hzdo08aqcdgd"
          key="0"
        />
        <input
          name="deleteCardslist"
          onClick={[Function]}
          type="button"
          value="Delete Cardslist"
        />
        <input
          name="editCardslist"
          onClick={[Function]}
          type="button"
          value="Edit Cardslist"
        />
      </li>
    </ul>
    <input
      name="addCardslist"
      onClick={[Function]}
      type="button"
      value="Add Cards list"
    />
     
    <CreateItems
      addItems={[Function]}
      name="cardslistInput"
      onAddInputChanged={[Function]}
    />
  </div>
</div>
`;

exports[`Cardslist component cardslist snapshot 1`] = `
<div
  className="board"
>
  <div
    className="board-name"
  >
    <h1>
      XML Health
    </h1>
  </div>
  <div
    className="board-list"
  >
    <ul>
      <li
        key="0"
      >
        <input
          disabled={true}
          id="2skdde39hzdo08aqcdgd"
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="XML Health"
        />
        <Connect(Cards)
          boardId="46mdujckqs45tkdsh2jdxz"
          cardslistId="2skdde39hzdo08aqcdgd"
          key="0"
        />
        <input
          name="deleteCardslist"
          onClick={[Function]}
          type="button"
          value="Delete Cardslist"
        />
        <input
          name="editCardslist"
          onClick={[Function]}
          type="button"
          value="Edit Cardslist"
        />
      </li>
    </ul>
    <input
      name="addCardslist"
      onClick={[Function]}
      type="button"
      value="Add Cards list"
    />
     
  </div>
</div>
`;
